arreglos de diseno

--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,8 @@
            <button class="list1"><a class="Ref" href="./Support.html">Support</a></button>
            <button class="list1"><a class="Ref" href="">About us</a></button>
         </div>
-        </div>       
+        </div>
+        <div style="height: 130px;"></div>   
     <header class="info1">
         <h1>Quienes somos?</h1>
         <hr>
