--- a/Support.html
+++ b/Support.html
@@ -19,6 +19,7 @@
            <button class="list1"><a class="Ref" href="">About us</a></button>
        </div>
        </div> 
+       <div style="height: 130px;"></div>  
        <div class="limpiador"></div>  
        <div class="contenedorSup">
            <header>
